fixed the issue #146
