# server/src/service/supportDocService.js
@@ -254,6 +254,47 @@ const getSupportDocByNominationIdAndDocId = async (req) => {
 
 };
 
+//Get support documents for a particular candidate
+const getSupportDocsByCandidateIdNumber = async (req) => {
+    try {
+        const candidateId = req.params.candidateId;
+        const supportDocs = await SupportDocRepo.getSupportDocsByCandidateId(candidateId);
+        const docs = [];
+        if(!_.isEmpty(supportDocs)){
+            supportDocs.forEach(function(item){
+                docs.push({path: './src/uploads/'+item.SUPPORT_DOC_filename, name: item.SUPPORT_DOC_originalname});
+            });
+            return docs;
+        }else {
+            throw new ApiError("Support Documents not found",HTTP_CODE_404);
+        }
+    }catch (e){
+        throw new ServerError("server error");
+    }
+
+};
+
+
+//Get support documents for a particular nomination
+const getSupportDocsByNominationIdNumber = async (req) => {
+    try {
+        const nominationId = req.params.nominationId;
+        const supportDocs = await SupportDocRepo.getSupportDocsByNominationId(nominationId);
+        const docs = [];
+        if(!_.isEmpty(supportDocs)){
+            supportDocs.forEach(function(item){
+                docs.push({path: './src/uploads/'+item.SUPPORT_DOC_filename, name: item.SUPPORT_DOC_originalname});
+            });
+            return docs;
+        }else {
+            throw new ApiError("Support Documents not found",HTTP_CODE_404);
+        }
+    }catch (e){
+        throw new ServerError("server error");
+    }
+
+};
+
 export default {
   getsupportDocsByNominationId,
   saveSupportDocsByNominationId,
@@ -267,4 +308,6 @@ export default {
     getSupportDocsByPaymentId,
     getSupportDocsByCandidateIdAndDocId,
     getSupportDocByNominationIdAndDocId,
+    getSupportDocsByCandidateIdNumber,
+    getSupportDocsByNominationIdNumber
 }
